Finish EditCoffee-component and do some small style changes

--- a/frontend/style/index.scss
+++ b/frontend/style/index.scss
@@ -9,7 +9,7 @@ $footer-padding: 1rem 1.5rem 1rem;
 body {
    background-color: #6f4e37;
    color: #f5efeb;
-   height: 100vh;
+   min-height: 100vh;
 }
 
 .label {
